Arabic subtitle doesn't work.
I have vlc 2.00 mac.
The old one work perfectly with Arabic subtitle.
I changed the option to arabic widows 1256 but still does not work.
It appears as squares.
Thank you for your great program :).
Edited
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Set suitable default encoding in the preferences. (If the encoding of subtitles file is UTF-8, it doesn't need.)
Set font in the preferences. Default value is Arial Black that doesn't contain any Arabic glyphs.
Run VLC and play a short movie (1sec ok:-) from terminal.app:
/Applications/VLC.app/Contents/MacOS/VLC -vvv >& /tmp/vlc.log
And find the freetype log:
[0x10409dcf0] freetype spu text debug: Using XXX as font from file /Library/Fonts/XXX.ttf
If Arabic font is properly set, you should see Arabic subtitles.
If you cant.
Try the following:
Reset preferences
Delete font cache (~/Library/Caches/fontconfig)
And please attach a piece of srt files you use. (not a full but a short in 250kb)
It worked when I changed the font to Arial instead of Arial Black. but the font is bad in Arabic and some of the punctuation marks appear as squares.
But the font in your picture is very good!!.
If you want an example of a perfect program in Arabic subtitles there is movist and the old vlc. I hop you fix the font in the next version. Thank you very much, I appreciate your help and your fast answer.
From 2.0, text renderer is changed from quartztext (using Mac OS X API) to freetype (library used widely Unices/windows). quartztext also exist snow but freetype is chosen by default.
Maybe we can do something about it? Like quitting Fontconfig and using Mac APIs?
I don't know well about Mac APIs, so I cannot state my opinion..
Do you mean changing only font choosing algolithm from using fontconfig to using Mac APIs, right?