freetype: fix extra squares in Arabic subtitles (fixes #6152 #8117)

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>